feat: limpeza dos dados

--- a/notebooks/churn-analysis.ipynb
+++ b/notebooks/churn-analysis.ipynb
@@ -589,6 +589,82 @@
     "\n",
     "- Churn: A taxa de Churn é de 20.13% (mean de 0.2013 na coluna Churn), o que é um número bem significativo."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b102528",
+   "metadata": {},
+   "source": [
+    "### 4. Limpeza dos dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "03af7a1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lista das colunas numéricas que precisam de correção\n",
+    "cols_num_clean = [\"Limite_Credito_Mercado\", \"Sum_Pedidos_Acumulados\"]\n",
+    "for col in cols_num_clean:\n",
+    "    df[col] = df[col].astype(str).str.replace(\".\", \"\", regex=False)\n",
+    "    df[col] = df[col].str.replace(\",\", \".\", regex=False).astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bc4da368",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lista das colunas de data que precisam de correção\n",
+    "cols_date_clean = [\"DataExtracao\", \"DataUltimaTransacao\"]\n",
+    "for col in cols_date_clean:\n",
+    "    df[col] = pd.to_datetime(df[col])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "09b75523",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Verificando os tipos de dados após a limpeza ---\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column                  Non-Null Count  Dtype         \n",
+      "---  ------                  --------------  -----         \n",
+      " 0   ClientId                10000 non-null  float64       \n",
+      " 1   DataExtracao            10000 non-null  datetime64[ns]\n",
+      " 2   Score_Credito           10000 non-null  int64         \n",
+      " 3   Estado                  10000 non-null  object        \n",
+      " 4   Gênero                  10000 non-null  object        \n",
+      " 5   Idade                   10000 non-null  int64         \n",
+      " 6   Tempo_Cliente           10000 non-null  int64         \n",
+      " 7   Limite_Credito_Mercado  10000 non-null  float64       \n",
+      " 8   Qte_Categorias          10000 non-null  int64         \n",
+      " 9   Usa_Cartao_Credito      10000 non-null  int64         \n",
+      " 10  Programa_Fidelidade     10000 non-null  int64         \n",
+      " 11  Sum_Pedidos_Acumulados  10000 non-null  float64       \n",
+      " 12  DataUltimaTransacao     10000 non-null  datetime64[ns]\n",
+      " 13  Churn                   10000 non-null  int64         \n",
+      "dtypes: datetime64[ns](2), float64(3), int64(7), object(2)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n--- Verificando os tipos de dados após a limpeza ---\")\n",
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
