feat: insights variáveis categóricas

--- a/notebooks/churn-analysis.ipynb
+++ b/notebooks/churn-analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6c5d5479",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e638fa07",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "208d9252",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ebff72c2",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f85637f7",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0ae2c7ab",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "03af7a1a",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bc4da368",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "09b75523",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
+   "id": "5451876d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Usa_Cartao_Credito</th>\n",
+       "      <th>Usa_Cartao_Credito_Label</th>\n",
+       "      <th>Programa_Fidelidade</th>\n",
+       "      <th>Programa_Fidelidade_Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Cadastrou</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Participa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Não cadastrou</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Participa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Cadastrou</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Não participa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Não cadastrou</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Não participa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Cadastrou</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Participa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Usa_Cartao_Credito Usa_Cartao_Credito_Label  Programa_Fidelidade  \\\n",
+       "0                   1                Cadastrou                    1   \n",
+       "1                   0            Não cadastrou                    1   \n",
+       "2                   1                Cadastrou                    0   \n",
+       "3                   0            Não cadastrou                    0   \n",
+       "4                   1                Cadastrou                    1   \n",
+       "\n",
+       "  Programa_Fidelidade_Label  \n",
+       "0                 Participa  \n",
+       "1                 Participa  \n",
+       "2             Não participa  \n",
+       "3             Não participa  \n",
+       "4                 Participa  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Mapeando valores binários (0/1) para rótulos descritivos\n",
+    "\n",
+    "# Mapeiando a coluna 'Usa_Cartao_Credito'\n",
+    "map_cartao = {1: \"Cadastrou\", 0: \"Não cadastrou\"}\n",
+    "df[\"Usa_Cartao_Credito_Label\"] = df[\"Usa_Cartao_Credito\"].map(map_cartao)\n",
+    "\n",
+    "# Mapeiando a coluna 'Programa_Fidelidade'\n",
+    "map_fidelidade = {1: \"Participa\", 0: \"Não participa\"}\n",
+    "df[\"Programa_Fidelidade_Label\"] = df[\"Programa_Fidelidade\"].map(map_fidelidade)\n",
+    "\n",
+    "# Exibindo as primeiras linhas para verificar a transformação\n",
+    "display(\n",
+    "    df[\n",
+    "        [\n",
+    "            \"Usa_Cartao_Credito\",\n",
+    "            \"Usa_Cartao_Credito_Label\",\n",
+    "            \"Programa_Fidelidade\",\n",
+    "            \"Programa_Fidelidade_Label\",\n",
+    "        ]\n",
+    "    ].head()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "1290d155",
    "metadata": {},
    "outputs": [
@@ -764,19 +881,19 @@
        "      <th>0</th>\n",
        "      <td>São Paulo</td>\n",
        "      <td>5014</td>\n",
-       "      <td>50.14</td>\n",
+       "      <td>50.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Minas Gerais</td>\n",
        "      <td>2509</td>\n",
-       "      <td>25.09</td>\n",
+       "      <td>25.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Rio de Janeiro</td>\n",
        "      <td>2477</td>\n",
-       "      <td>24.77</td>\n",
+       "      <td>24.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -784,9 +901,9 @@
       ],
       "text/plain": [
        "           Estado  Contagem  Porcentagem (%)\n",
-       "0       São Paulo      5014            50.14\n",
-       "1    Minas Gerais      2509            25.09\n",
-       "2  Rio de Janeiro      2477            24.77"
+       "0       São Paulo      5014             50.1\n",
+       "1    Minas Gerais      2509             25.1\n",
+       "2  Rio de Janeiro      2477             24.8"
       ]
      },
      "metadata": {},
@@ -812,9 +929,9 @@
          "orientation": "v",
          "showlegend": false,
          "text": [
-          "50.14%",
-          "25.09%",
-          "24.77%"
+          "50.1%",
+          "25.1%",
+          "24.8%"
          ],
          "textposition": "auto",
          "type": "bar",
@@ -1681,13 +1798,13 @@
        "      <th>0</th>\n",
        "      <td>Masculino</td>\n",
        "      <td>5457</td>\n",
-       "      <td>54.57</td>\n",
+       "      <td>54.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Feminino</td>\n",
        "      <td>4543</td>\n",
-       "      <td>45.43</td>\n",
+       "      <td>45.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1695,8 +1812,8 @@
       ],
       "text/plain": [
        "      Gênero  Contagem  Porcentagem (%)\n",
-       "0  Masculino      5457            54.57\n",
-       "1   Feminino      4543            45.43"
+       "0  Masculino      5457             54.6\n",
+       "1   Feminino      4543             45.4"
       ]
      },
      "metadata": {},
@@ -1722,8 +1839,8 @@
          "orientation": "v",
          "showlegend": false,
          "text": [
-          "54.57%",
-          "45.43%"
+          "54.6%",
+          "45.4%"
          ],
          "textposition": "auto",
          "type": "bar",
@@ -2554,7 +2671,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "---------- Análise da Variável: 'Usa_Cartao_Credito' ----------\n",
+      "---------- Análise da Variável: 'Usa_Cartao_Credito_Label' ----------\n",
       "Tabela de Frequência:\n"
      ]
     },
@@ -2579,7 +2696,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Usa_Cartao_Credito</th>\n",
+       "      <th>Usa_Cartao_Credito_Label</th>\n",
        "      <th>Contagem</th>\n",
        "      <th>Porcentagem (%)</th>\n",
        "    </tr>\n",
@@ -2587,24 +2704,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>Cadastrou</td>\n",
        "      <td>7055</td>\n",
-       "      <td>70.55</td>\n",
+       "      <td>70.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
+       "      <td>Não cadastrou</td>\n",
        "      <td>2945</td>\n",
-       "      <td>29.45</td>\n",
+       "      <td>29.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Usa_Cartao_Credito  Contagem  Porcentagem (%)\n",
-       "0                   1      7055            70.55\n",
-       "1                   0      2945            29.45"
+       "  Usa_Cartao_Credito_Label  Contagem  Porcentagem (%)\n",
+       "0                Cadastrou      7055             70.6\n",
+       "1            Não cadastrou      2945             29.4"
       ]
      },
      "metadata": {},
@@ -2618,7 +2735,7 @@
        },
        "data": [
         {
-         "hovertemplate": "Usa_Cartao_Credito=%{x}<br>Contagem=%{y}<br>text=%{text}<extra></extra>",
+         "hovertemplate": "Usa_Cartao_Credito_Label=%{x}<br>Contagem=%{y}<br>text=%{text}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": "#636efa",
@@ -2630,15 +2747,15 @@
          "orientation": "v",
          "showlegend": false,
          "text": [
-          "70.55%",
-          "29.45%"
+          "70.6%",
+          "29.4%"
          ],
          "textposition": "auto",
          "type": "bar",
-         "x": {
-          "bdata": "AQA=",
-          "dtype": "i1"
-         },
+         "x": [
+          "Cadastrou",
+          "Não cadastrou"
+         ],
          "xaxis": "x",
          "y": {
           "bdata": "jxuBCw==",
@@ -3429,7 +3546,7 @@
          }
         },
         "title": {
-         "text": "Distribuição da Variável \"Usa_Cartao_Credito\""
+         "text": "Distribuição da Variável \"Usa_Cartao_Credito_Label\""
         },
         "xaxis": {
          "anchor": "y",
@@ -3438,7 +3555,7 @@
           1
          ],
          "title": {
-          "text": "Usa_Cartao_Credito"
+          "text": "Usa_Cartao_Credito_Label"
          }
         },
         "yaxis": {
@@ -3462,7 +3579,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "---------- Análise da Variável: 'Programa_Fidelidade' ----------\n",
+      "---------- Análise da Variável: 'Programa_Fidelidade_Label' ----------\n",
       "Tabela de Frequência:\n"
      ]
     },
@@ -3487,7 +3604,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Programa_Fidelidade</th>\n",
+       "      <th>Programa_Fidelidade_Label</th>\n",
        "      <th>Contagem</th>\n",
        "      <th>Porcentagem (%)</th>\n",
        "    </tr>\n",
@@ -3495,24 +3612,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>Participa</td>\n",
        "      <td>5151</td>\n",
-       "      <td>51.51</td>\n",
+       "      <td>51.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
+       "      <td>Não participa</td>\n",
        "      <td>4849</td>\n",
-       "      <td>48.49</td>\n",
+       "      <td>48.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Programa_Fidelidade  Contagem  Porcentagem (%)\n",
-       "0                    1      5151            51.51\n",
-       "1                    0      4849            48.49"
+       "  Programa_Fidelidade_Label  Contagem  Porcentagem (%)\n",
+       "0                 Participa      5151             51.5\n",
+       "1             Não participa      4849             48.5"
       ]
      },
      "metadata": {},
@@ -3526,7 +3643,7 @@
        },
        "data": [
         {
-         "hovertemplate": "Programa_Fidelidade=%{x}<br>Contagem=%{y}<br>text=%{text}<extra></extra>",
+         "hovertemplate": "Programa_Fidelidade_Label=%{x}<br>Contagem=%{y}<br>text=%{text}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": "#636efa",
@@ -3538,15 +3655,15 @@
          "orientation": "v",
          "showlegend": false,
          "text": [
-          "51.51%",
-          "48.49%"
+          "51.5%",
+          "48.5%"
          ],
          "textposition": "auto",
          "type": "bar",
-         "x": {
-          "bdata": "AQA=",
-          "dtype": "i1"
-         },
+         "x": [
+          "Participa",
+          "Não participa"
+         ],
          "xaxis": "x",
          "y": {
           "bdata": "HxTxEg==",
@@ -4337,7 +4454,7 @@
          }
         },
         "title": {
-         "text": "Distribuição da Variável \"Programa_Fidelidade\""
+         "text": "Distribuição da Variável \"Programa_Fidelidade_Label\""
         },
         "xaxis": {
          "anchor": "y",
@@ -4346,7 +4463,7 @@
           1
          ],
          "title": {
-          "text": "Programa_Fidelidade"
+          "text": "Programa_Fidelidade_Label"
          }
         },
         "yaxis": {
@@ -4371,8 +4488,8 @@
     "variaveis_categoricas = [\n",
     "    \"Estado\",\n",
     "    \"Gênero\",\n",
-    "    \"Usa_Cartao_Credito\",\n",
-    "    \"Programa_Fidelidade\",\n",
+    "    \"Usa_Cartao_Credito_Label\",\n",
+    "    \"Programa_Fidelidade_Label\",\n",
     "]\n",
     "\n",
     "# Loop para criar a tabela de frequência e o gráfico de barras para cada variável\n",
@@ -4384,7 +4501,7 @@
     "    tabela_frequencia.columns = [var, \"Contagem\"]\n",
     "    tabela_frequencia[\"Porcentagem (%)\"] = (\n",
     "        tabela_frequencia[\"Contagem\"] / len(df) * 100\n",
-    "    ).round(2)\n",
+    "    ).round(1)\n",
     "\n",
     "    print(\"Tabela de Frequência:\")\n",
     "    display(tabela_frequencia)\n",
@@ -4403,7 +4520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "64053c22",
    "metadata": {},
    "outputs": [
@@ -10093,6 +10210,30 @@
     "    )\n",
     "\n",
     "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33d3014e",
+   "metadata": {},
+   "source": [
+    "#### 2.2 Principais Insights da Análise Univariada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15503773",
+   "metadata": {},
+   "source": [
+    "Perfil Demográfico e Comportamental (Variáveis Categóricas)\n",
+    "\n",
+    "* **Estado:** A base é fortemente concentrada em **São Paulo**, que representa **50.1%** de todos os clientes. O restante é dividido de forma quase idêntica entre **Minas Gerais (25.1%)** e **Rio de Janeiro (24.8%)**.\n",
+    "    \n",
+    "* **Gênero:** A distribuição entre gêneros é ligeiramente desequilibrada, com uma leve maioria do público **Masculino (54.6%)** em relação ao **Feminino (45.4%)**.\n",
+    "    \n",
+    "* **Uso de Cartão de Crédito:** A grande maioria dos clientes (**70.6%**) confirma que **\"Sim (Cadastrou)\"** um cartão de crédito no aplicativo. Apenas 29.4% indicam \"Não (Não Cadastrou)\".\n",
+    "    \n",
+    "* **Programa de Fidelidade:** A adesão ao programa de fidelidade é **extremamente equilibrada**, com **51.5%** dos clientes na categoria **\"Sim (Participa)\"** e **48.5%** na categoria **\"Não (Não Participa)\"**. Não há uma tendência dominante aqui."
    ]
   }
  ],
