feat: insights variáveis numéricas

--- a/notebooks/churn-analysis.ipynb
+++ b/notebooks/churn-analysis.ipynb
@@ -10235,6 +10235,38 @@
     "    \n",
     "* **Programa de Fidelidade:** A adesão ao programa de fidelidade é **extremamente equilibrada**, com **51.5%** dos clientes na categoria **\"Sim (Participa)\"** e **48.5%** na categoria **\"Não (Não Participa)\"**. Não há uma tendência dominante aqui."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa3e232d",
+   "metadata": {},
+   "source": [
+    "Perfil Financeiro e de Engajamento (Variáveis Numéricas)\n",
+    "\n",
+    "* **Score de Crédito:** o score médio do cliente é de **650**, com uma distribuição muito simétrica e normal. A maioria dos clientes (50% da base) se encontra entre **584** e **718** pontos.\n",
+    "    \n",
+    "* **Idade e Tempo de Cliente:** a idade média é de **39 anos**, com 50% da base entre 32 e 44 anos. O tempo de cliente é perfeitamente distribuído, com média de **5 meses**.\n",
+    "    \n",
+    "* **Poder Aquisitivo:** identificamos dois perfis claros na base. **Pelo menos 25% dos clientes possuem Limite de Crédito zero**. O restante dos clientes tem um limite mediano de **R$ 971**.\n",
+    "    \n",
+    "* **Engajamento com o App:** o engajamento com a variedade do app é baixo. **Pelo menos 50% de todos os clientes compraram de apenas UMA categoria de produto**. A grande maioria (75%) navega por no máximo duas categorias.\n",
+    "    \n",
+    "* **Volume de Pedidos:** o gasto acumulado é bem distribuído, com `média` e `mediana` quase idênticas em torno de **R$ 417**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96964a41",
+   "metadata": {},
+   "source": [
+    "Conclusão da Análise Univariada\n",
+    "\n",
+    "Temos um perfil claro: nosso cliente \"típico\" é um homem (55%) de São Paulo (50%), com 39 anos e 5 meses de casa. Ele cadastrou seu cartão (70%), tem um score de 650 e gastou cerca de R$ 417.\n",
+    "\n",
+    "**Principais pontos de atenção para a próxima fase:**\n",
+    "1.  O **Limite de Crédito zero** afeta o churn?\n",
+    "2.  Clientes que compram de **apenas uma categoria** (baixo engajamento) têm mais chance de sair?"
+   ]
   }
  ],
  "metadata": {
